--- a/index.html
+++ b/index.html
@@ -243,6 +243,22 @@
             <h2>*Diagrama</h2>
           </section>
           <section>
+            <h2>Componente</h2>
+            <img src="img/d1.jpg" height="300">
+          </section>
+          <section>
+            <h2>Pipe/Socket/...</h2>
+            <img src="img/d2.jpg" height="300">
+          </section>
+          <section>
+            <h2>Em paralelo</h2>
+            <img src="img/d3.jpg" height="300">
+          </section>
+          <section>
+            <h2>Tudo junto</h2>
+            <img src="img/d4.jpg" height="300">
+          </section>
+          <section>
             <h2>Reiventando a roda, hein?</h2>
           </section>
           <section>
