--- a/index.html
+++ b/index.html
@@ -42,58 +42,32 @@
       <div class="slides">
 
         <section>
-          <h1>Oi</h1>
-          <p>Me disseram que eu tinha pouco tempo,<br>então vamos agilizar!</p>
+          <h1>O Mercado de Trabalho como é</h1>
+          <p>Ronie Uliana | @ronie</p>
         </section>
         <section>
-          <h1>Meu nome é Ronie</h1>
+          <h2>Sobre o que vou falar?</h2>
+          <p>Nosso <b>experimento</b> com uma <b>arquitetura distribuída</b> para processar um grande volume de dados.</p>
         </section>
         <section>
-          <h1>Trabalho na VAGAS.com</h1>
+          <h1>E daí?</h1>
+          <p>O resultado foi <b>muito bom</b>,<br>e talvez a experiência dê <b>ideias interessantes</b>.</p>
         </section>
         <section>
-          <h1>Nós construímos um sistema ANIMAL!</h1>
-        </section>
-        <section>
-          <h1>Processando milhões de dados</h1>
-        </section>
-        <section>
-          <h2>Nele, o S.O. é <i>parte</i> do software e não algo <i>embaixo</i></h2>
-        </section>
-        <section>
-          <h1>Os resultados foram muito bons</h1>
-        </section>
-        <section>
-          <h1>E talvez essa experiência possa dar ideias</h1>
-        </section>
-        <section>
-          <h1>Obrigado!</h1>
-          <p class="fragment">Ok, isso foi rápido demais &gt;_&lt;</p>
-          <p class="fragment">Deixa tentar de novo...</p>
-        </section>
-
-        <section>
-          <h1>Oi</h1>
-        </section>
-        <section>
+          <section>
+            <h1>Quem sou eu?</h1>
+          </section>
           <section>
             <h1>Meu nome é</h1>
             <img src="img/RonieUliana.jpg" alt="Ronie Uliana" width="200" height="200">
             <h1>Ronie</h1>
-          </section>
-          <section>
-            <h2>Sou um tiuzão Nerd!</h2>
-            <p>Mas menos que o <b>Taq</b></p>
-            <img src="img/taq-foto.jpe" alt="Taq foto" height="250">
-            <img src="img/taq-barraca.jpg" alt="Taq errr.." height="250">
-            <p>Menos loco tb :p</p>
-            <p>(se liga na cara do tiuzinho no fundo)</p>
+            <p>Fuçando e programando desde <b>1986</b></p>
           </section>
           <section>
             <h2>Meu negócio é...</h2>
-            <p>Programar</p>
-            <p><i>Work smarter, not harder</i></p>
-            <p>RPG, tabuleiros, etc...</p>
+            <p>Arquitetura de Software</p>
+            <p>Perl, VB, Scala, C, C++, Smalltalk, C#, Lisp (Racket, Clojure), Java, <b>Julia</b>, Factor, Haskell e <b>Ruby</b></p>
+            <p>Jogos... muito jogos... ^_^</p>
           </section>
           <section>
             <p>e, ultimamente...</p>
@@ -120,55 +94,35 @@
             <img src="img/Sidney-MK.jpg" alt="Sidney Monreal e Mário Kaphan" height="220">
             <p>Fundadores e ótimos amigos!</p>
           </section>
-        </section>
-
-        <section>
           <section>
-            <h1>Nós construímos um sistema ANIMAL!</h1>
-          </section>
-          <section>
-            <h2>vagas.com/mapa-de-carreiras</h2>
-            <p>Retrato do Mercado de Trabalho</p>
-          </section>
-          <section>
-            <h2>Quem vai para onde</h2>
-            <img src="img/Tooltip_001.png" alt="Arquiteto de Software">
-          </section>
-          <section>
-            <h2>Quanto ganha</h2>
-            <img src="img/Selection_002.png" alt="Salário do Arquiteto de Software">
-          </section>
-          <section>
-            <h2>O que faz</h2>
-            <img src="img/Selection_003.png" alt="Palavras-chave do Arquiteto de Software">
-          </section>
-          <section>
-            <h2>Usando..</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ar9KtKhIIog" frameborder="0" allowfullscreen></iframe>
-          </section>
-          <section>
-            <h2>O que as pessoas dizem...</h2>
-            <p>e não o opinião de algum especialista ^_^</p>
-            <p>(isso causa efeitos interessantes...)</p>
-          </section>
-          <section>
-            <h2>O causo do "Diretor&nbsp;de&nbsp;Marketing"</h2>
-            <p>Por que ganham menos que "Gerente de Marketing"</p>
-            <img src="img/pretend.jpg" alt="Maior do que parece">
-            <aside class="notes">
-              Na mediana:<br>
-              <b>Diretor</b>: 4.829,00 (454)<br>
-              conf 95%: 4.100 - 6.000<br>
-              <b>Gerente</b>: 6.685,00 (2.368)<br>
-              conf 95%: 6400 - 7.000<br>
-              "Eupresa" &lt;= Muita empresa de um homem só
-            </aside>
+            <p style="white-space:nowrap">
+              Empresas encontrando as melhores pessoas,<br>
+              Pessoas encontrando as melhores empresas.
+            </p>
           </section>
         </section>
 
         <section>
           <section>
-            <h1>Processando milhões de dados</h1>
+            <h2>Nós construímos algo muito interessante...</h2>
+            <p>...processando alguns <b>milhões</b> de dados.</p>
+          </section>
+          <section>
+            <h3>vagas.com/mapa-de-carreiras</h3>
+            <p>Panorama do Mercado de Trabalho</p>
+          </section>
+          <section data-background-video="img/exemplo-mapa.mp4"></section>
+          <section>
+            <h2>A parte interessante</h2>
+            <p><b>Não</b> é o opinião de algum especialista.</p>
+            <p>É o que as pessoas escrevem.</p>
+            <p>(isso causa <i>efeitos interessantes</i>...)</p>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h1>Foi construído com milhões de dados</h1>
           </section>
           <section>
             <h2>
@@ -176,16 +130,18 @@
               Milhões
             </h2>
             <p>10.000.000 de currículos</p>
-            <p>Uruguai x 3</p>
+            <p>3x Uruguai até o último indivíduo</p>
           </section>
           <section>
             <h2>148.000</h2>
             <h3>Auxiliares Administrativos</h3>
+            <p>Dá para encher <b>três</b> Arenas Corinthians<br><b>só</b> de Auxiliares Administrativos</p>
           </section>
           <section>
             <h2>+80 eventos/seg</h2>
             <p>Metrô da Sé: 7,18 passageiros/seg</p>
             <img src="img/subway.gif" alt="Subway">
+            <p>(O <b>Marcello</b> vai falar sobre isso amanhã)</p>
             <aside class="notes">
               <p>4.800/min</p>
               <p>48.000 em 10 min</p>
@@ -193,22 +149,13 @@
             </aside>
           </section>
           <section>
-            <h1>Isso é Big Data?</h1>
-            <p class="fragment">Talvez não, mas não importa...</p>
-            <div class="fragment">
-              <p>É mais do que cabe na memória da minha máquina &gt;_&lt;</p>
-              <p>É mais do que minha paciência aguenta esperar :p</p>
-            </div>
+            <h2>É gente pra dedéu!</h2>
+            <h2 class="fragment">Mas é Big Data?</h2>
+            <p class="fragment">Não importa...</p>
           </section>
           <section>
-            <h2>So... bring the<br>BIG GUNS!!!</h2>
-            <img src="img/big-guns.jpg" alt="Big Guns">
-            <p>Hadoop, Storm, Spark, ...</p>
-          </section>
-          <section>
-            <h2>Ou não :p</h2>
-            <h3>E se tentássemos algo mais...</h3>
-            <p>...simples?</p>
+            <p>É mais do que cabe na <b>memória</b> da minha máquina &gt;_&lt;</p>
+            <p>É mais do que minha paciência aguenta <b>esperar</b> :p</p>
           </section>
           <section>
             <h2>O que precisamos,<br>na real?</h2>
@@ -219,38 +166,63 @@
               <li>Trocar partes facilmente <span class="fragment">(Componentes)</span></li>
             </ul>
           </section>
-          <section data-background="img/fireback.jpg">
-            <h1 style="color:black;font-weight:bold">REALLY BIG</h1>
-            <img src="img/m60-2.jpg" alt="Big Guns" height="300">
-            <h1 style="color:black;font-weight:bold">GUNS!!!</h1>
-          </section>
-          <section>
-            <img src="img/pokerface.jpg" alt="Pokerface" height="400">
-            <h2>...</h2>
-          </section>
         </section>
 
         <section>
           <section>
-            <h2>"Nele, o S.O. é <i>parte</i> do software e não algo <i>embaixo</i>"</h2>
+            <h2>Usamos o S.O. como <b>parte</b> do sistema</h2>
           </section>
           <section>
-            <h1>E se...</h1>
-            <h2>usássemos apenas<br>o Sistema Operacional?</h2>
-            <p>Processos, Pipes, Sockets</p>
+            <p>Scheduler, Processos, Pipes, Sockets</p>
+            <p>"Pipes and Filters"</p>
           </section>
           <section>
-            <h2>*Diagrama</h2>
+            <h1>Como?</h1>
+          </section>
+          <section data-background="img/b-01.png">
+            <aside class="notes">
+              <p>Programa ou processo</p>
+              <p>Cada transformação do dado é um programa separado</p>
+              <p>Exemplo: TF-IDF</p>
+              <p>Unir, quebrar, normalizar, contar, calcular, gravar</p>
+            </aside>
+          </section>
+          <section data-background="img/b-02.png">
+            <aside class="notes">
+              <p>Processos são conectados com pipes</p>
+              <p>Linux Pipes ou Sockets</p>
+              <p>IO simples, qq coisa que lê ou grava de arquivo serve</p>
+              <p>Uma palavra ou conjunto</p>
+            </aside>
+          </section>
+          <section data-background="img/b-03.png">
+            <aside class="notes">
+              <p>As informações são repassadas para o próximo processo uma de cada vez</p>
+              <p>Paralelismo</p>
+              <p>Distribuição (processos em máquinas diferentes)</p>
+              <p>Pouca memória</p>
+              <p>Exemplo</p>
+            </aside>
+          </section>
+          <section data-background="img/b-04.png">
+            <aside class="notes">
+              <p>É possível dividir o processo</p>
+              <p>Outro tipo de paralelismo</p>
+            </aside>
+          </section>
+          <section data-background="img/b-05.png">
+            <aside class="notes">
+              <p>Source - qq coisa</p>
+              <p>Sink - qq coisa</p>
+            </aside>
           </section>
           <section>
-            <h2>Reiventando a roda, hein?</h2>
-          </section>
-          <section>
-            <h2>Mas... mas...</h2>
-            <p>Isso tudo já estava aí BEM antes :p</p>
-          </section>
-          <section>
-            <h2>Whatever...<br>e os resultados?</h2>
+            <h2>Orquestrador</h2>
+            <p>github.com/VAGAScom/deadly_serious</p>
+            <p>Só para facilitar o trabalho ^_^</p>
+            <aside class="notes">
+              <p>Dar um tempo nesse slide para as pessoas copiarem o link</p>
+            </aside>
           </section>
         </section>
 
@@ -260,6 +232,14 @@
             <aside class="notes">
               <p>Aqui ficam as <b>lições aprendidas</b></p>
             </aside>
+          </section>
+          <section>
+            <h2>Tempo?</h2>
+            <p><b>6 horas</b> de processamento em um i7 (8 cores) 16Gb RAM</p>
+            <p>&nbsp;</p>
+            <p>Salários: ~6.000.000 salários x bootstrap(1.000)</p>
+            <p>=</p>
+            <p>~6.000.000.000 operações</p>
           </section>
           <section>
             <h2>Memória?</h2>
@@ -308,17 +288,20 @@
           </section>
           <section>
             <h2>Nem tudo<br>são flores =/</h2>
-            <p>Sobram zumbis em alguns crashs (my bad)</p>
-            <p>Difícil testar o "montador de pipelines"</p>
-            <p>"Freezes" são um porre &gt;_&lt;</p>
+            <p class="fragment">Sobram zumbis em alguns crashs (my bad)</p>
+            <p class="fragment">Difícil testar o "montador de pipelines"</p>
+            <p class="fragment">"Freezes" são um porre &gt;_&lt;</p>
+            <p class="fragment">"Sort" é importante</p>
+            <p class="fragment">Adicionar mais um campo (e preservá-lo)</p>
+            <p class="fragment">Overhead na serialização e desserialização</p>
           </section>
         </section>
         <section>
           <section>
-            <h1>E talvez essa experiência possa dar ideias</h1>
+            <h1>O que dá para levar disso?</h1>
           </section>
           <section>
-            <h2>Três fontes</h2>
+            <h2>Duas fontes</h2>
             <aside class="notes">
               <p>Quem conhece Flow Based Programming?</p>
             </aside>
@@ -334,10 +317,8 @@
             </aside>
           </section>
           <section>
-            <h2>ØMQ Philosophy</h2>
-            <aside class="notes">
-              <p>Distribuição simples, menos é mais</p>
-            </aside>
+            <blockquote>...often people use Hadoop and other so-called Big Data (tm) tools for real-world processing and analysis jobs that can be done faster with simpler tools and different techniques.</blockquote>
+            <p style="font-size:smaller">http://aadrake.com/<br>command-line-tools-can-be-235x-faster-than-your-hadoop-cluster.html</p>
           </section>
           <section>
             <h2>Nós criamos sistemas complexos demais</h2>
