--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
               Empresas encontrando as melhores pessoas,<br>
               Pessoas encontrando as melhores empresas.
             </p>
+            <aside class="notes">
+              <p>Nosso negócio é...</p>
+            </aside>
           </section>
         </section>
 
@@ -116,7 +119,6 @@
             <h2>A parte interessante</h2>
             <p><b>Não</b> é o opinião de algum especialista.</p>
             <p>É o que as pessoas escrevem.</p>
-            <p>(isso causa <i>efeitos interessantes</i>...)</p>
           </section>
         </section>
 
@@ -150,8 +152,8 @@
           </section>
           <section>
             <h2>É gente pra dedéu!</h2>
-            <h2 class="fragment">Mas é Big Data?</h2>
-            <p class="fragment">Não importa...</p>
+            <h2>Mas é Big Data?</h2>
+            <p>Não importa...</p>
           </section>
           <section>
             <p>É mais do que cabe na <b>memória</b> da minha máquina &gt;_&lt;</p>
@@ -309,15 +311,17 @@
           <section>
             <h2>Flow Based Programming</h2>
             <img src="img/fbp-book.jpg" alt="Livro de FBP" width="260" height="324">
+            <p>http://www.jpaulmorrison.com/fbp/</p>
           </section>
           <section>
             <h2>The Unix Philosophy</h2>
+            <blockquote>"This is the Unix philosophy: Write programs that <b>do one thing</b> and <b>do it well</b>. Write programs to <b>work together</b>. Write programs to handle <b>text streams</b>, because that is a universal interface." - Doug McIlroy</blockquote>
             <aside class="notes">
               <p>Faça apenas uma coisa e faça ela bem feita</p>
             </aside>
           </section>
           <section>
-            <blockquote>...often people use Hadoop and other so-called Big Data (tm) tools for real-world processing and analysis jobs that can be done faster with simpler tools and different techniques.</blockquote>
+            <blockquote>"...often people use Hadoop and other so-called Big Data (tm) tools for real-world processing and analysis jobs that can be done faster with simpler tools and different techniques."</blockquote>
             <p style="font-size:smaller">http://aadrake.com/<br>command-line-tools-can-be-235x-faster-than-your-hadoop-cluster.html</p>
           </section>
           <section>
