Melhorando um pouco a apresentação

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>O Mercado de Trabalho como é!</title>
+    <title>Streams para MUITOS dados</title>
 
     <meta name="description" content="Processando dados do jeito simples">
     <meta name="author" content="Ronie Uliana">
@@ -42,7 +42,7 @@
       <div class="slides">
 
         <section>
-          <h1>O Mercado de Trabalho como é</h1>
+          <h1>Streams para MUITOS dados</h1>
           <p>Ronie Uliana | @ronie</p>
         </section>
         <section>
@@ -64,21 +64,12 @@
             <p>Escovando bits desde "faz tempo" <b>(~1990)</b></p>
           </section>
           <section>
-            <h2>O que faz a criatura?</h2>
+            <h2>O que faço?</h2>
             <ul>
-              <li class="fragment">Arquiteto de Software</li>
-              <li class="fragment">Fissurado em linguagens de programação</li>
-              <li class="fragment">Perl, VB, Scala, C, C++, Smalltalk, C#, Lisp (Racket, Clojure), Java (sem saudades), <b>Julia</b>, Factor, Haskell e <b>Ruby (10 anos)</b></li>
-              <li class="fragment">Jogos... de todos os tipos ^_^</li>
+              <li>Arquiteto de Software</li>
+              <li>Cientista de Dados Aprendiz :P</li>
+              <li>co-fundador do falecido RubyOnBr</li>
             </ul>
-            <aside class="notes">
-              <p>co-fundador do falecido RubyOnBr</p>
-            </aside>
-          </section>
-          <section>
-            <p>e, ultimamente...</p>
-            <h2>Data Science</h2>
-            <img src="img/hulk-calm.jpg" alt="Hulk smash data">
           </section>
         </section>
 
@@ -100,13 +91,11 @@
             <p>Fundadores e ótimos amigos!</p>
           </section>
           <section>
+              <p>Nosso negócio é...</p>
             <p style="white-space:nowrap">
               Empresas encontrando as melhores pessoas,<br>
               Pessoas encontrando as melhores empresas.
             </p>
-            <aside class="notes">
-              <p>Nosso negócio é...</p>
-            </aside>
           </section>
           <section>
             <h3>Alguns de nossos números</h3>
@@ -149,7 +138,7 @@
             <h1>10.000.000<br>currículos</h1>
           </section>
           <section>
-            <h2>É gente pra dedéu!</h2>
+            <h2>É muita informação</h2>
             <h2>Mas é Big Data?</h2>
             <p>Não importa...</p>
           </section>
@@ -212,8 +201,8 @@
           </section>
           <section data-background="img/b-05.png">
             <aside class="notes">
-              <p>Source - qq coisa</p>
-              <p>Sink - qq coisa</p>
+              <p>Source - Quem fornece os dados</p>
+              <p>Sink - Quem consome os dados ao final</p>
             </aside>
           </section>
           <section>
@@ -321,6 +310,7 @@
             </aside>
           </section>
           <section>
+            <h4>Command-line tools can be 235x faster<br>than your Hadoop cluster</h4>
             <blockquote>"...often people use Hadoop and other so-called Big Data (tm) tools for real-world processing and analysis jobs that can be done faster with simpler tools and different techniques."</blockquote>
             <p style="font-size:smaller">http://aadrake.com/<br>command-line-tools-can-be-235x-faster-than-your-hadoop-cluster.html</p>
           </section>
